@startuml BCE_CreateUserAccount
title Create User Account

left to right direction
skinparam backgroundColor #FAFAFA
skinparam defaultFontName Arial
skinparam classBackgroundColor White
skinparam classBorderColor #333333

class "manage_users.js" as B {
  +loadData(filters)
  +renderTable(users)
}

class "CreateUserAccountController" as C {
  +dict
  createAccount(string username, string password,
  string email, int role_id, string first_name,
  string last_name, string phone)
}

class "Account" as E {
  +bool
  insertNewUser(dict account_data)
}

B -- C
C -- E

@enduml
